--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,18 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/statisticsFragment"
-        android:title="@string/statistics"
-        android:icon="@drawable/ic_statistics"/>
-
-    <item
         android:id="@+id/tasksFragment"
-        android:title="@string/tasks"
-        android:icon="@drawable/ic_tasks"/>
+        android:icon="@drawable/ic_tasks"
+        android:title="@string/tasks"/>
 
     <item
         android:id="@+id/habitsFragment"
-        android:title="@string/habits"
-        android:icon="@drawable/ic_habits"/>
+        android:icon="@drawable/ic_habits"
+        android:title="@string/habits"/>
+
+    <item
+        android:id="@+id/plantGrowthFragment"
+        android:icon="@drawable/ic_plant"
+        android:title="@string/plant"/>
+
+    <item
+        android:id="@+id/statisticsFragment"
+        android:icon="@drawable/ic_statistics"
+        android:title="@string/statistics"/>
+
 </menu>
