--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,59 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
+<com.google.android.material.appbar.MaterialToolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/toolbarHeight"
-    style="@style/NavigationElementStyle">
+    android:layout_height="?attr/actionBarSize"
+    android:background="@color/toolbarBackground"
+    android:elevation="6dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/toolbarTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textAppearance="@style/TitleText"
-        android:visibility="gone"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/textPrimary"
+        android:layout_gravity="center" />
 
-
-        android:layout_gravity="center"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/deleteButton"
-        android:layout_width="@dimen/toolbarButtonSize"
-        android:layout_height="@dimen/toolbarButtonSize"
-        android:contentDescription="@string/delete_habit"
-
-        android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_delete"
-        android:layout_gravity="end"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/editButton"
-        android:layout_width="@dimen/toolbarButtonSize"
-        android:layout_height="@dimen/toolbarButtonSize"
-        android:contentDescription="@string/edit_habit"
-
-        android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_edit"
-        android:layout_gravity="end"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/settingsButton"
-        android:layout_width="@dimen/toolbarButtonSize"
-        android:layout_height="@dimen/toolbarButtonSize"
-        android:contentDescription="@string/settings"
-
-        android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_settings"
-        android:layout_gravity="end"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
+    <ImageButton
         android:id="@+id/addHabitButton"
-        android:layout_width="@dimen/toolbarButtonSize"
-        android:layout_height="@dimen/toolbarButtonSize"
-        android:contentDescription="@string/create_habit"
-
-        android:background="?selectableItemBackgroundBorderless"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_add"
-        android:layout_gravity="end"/>
-</androidx.appcompat.widget.Toolbar>
+        android:tint="@color/textPrimary"
+        android:layout_gravity="end" />
+
+    <ImageButton
+        android:id="@+id/editButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_edit"
+        android:tint="@color/textPrimary"
+        android:layout_gravity="end" />
+
+    <ImageButton
+        android:id="@+id/deleteButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/textPrimary"
+        android:layout_gravity="end" />
+
+    <ImageButton
+        android:id="@+id/buttonPlant"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_plant"
+        android:tint="@color/textPrimary"
+        android:layout_gravity="end" />
+
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_settings"
+        android:tint="@color/textPrimary"
+        android:layout_gravity="end" />
+
+</com.google.android.material.appbar.MaterialToolbar>
