--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,15 +6,14 @@
     android:id="@+id/navigation_graph"
     app:startDestination="@id/tasksFragment">
 
-    <!--Home and task List screen-->
+    <!-- Home / Tasks screen -->
     <fragment
         android:id="@+id/tasksFragment"
         android:label="@string/tasks"
         android:name="com.santtuhyvarinen.habittracker.fragments.TasksFragment"
-        tools:layout="@layout/fragment_tasks">
-    </fragment>
+        tools:layout="@layout/fragment_tasks" />
 
-    <!--Statistics screen-->
+    <!-- Statistics screen -->
     <fragment
         android:id="@+id/statisticsFragment"
         android:label="@string/statistics"
@@ -23,12 +22,12 @@
 
         <action
             android:id="@+id/action_from_statisticsFragment_to_habitViewFragment"
+            app:destination="@id/habitViewFragment"
             app:enterAnim="@anim/anim_slide_in"
-            app:exitAnim="@anim/anim_slide_out"
-            app:destination="@id/habitViewFragment"/>
+            app:exitAnim="@anim/anim_slide_out" />
     </fragment>
 
-    <!--Habit list screen-->
+    <!-- Habit list -->
     <fragment
         android:id="@+id/habitsFragment"
         android:label="@string/habits"
@@ -37,9 +36,9 @@
 
         <action
             android:id="@+id/action_from_habitsFragment_to_habitViewFragment"
+            app:destination="@id/habitViewFragment"
             app:enterAnim="@anim/anim_slide_in"
-            app:exitAnim="@anim/anim_slide_out"
-            app:destination="@id/habitViewFragment">
+            app:exitAnim="@anim/anim_slide_out">
             <argument
                 android:name="habit_id"
                 app:argType="long"
@@ -47,7 +46,7 @@
         </action>
     </fragment>
 
-    <!--Habit view screen-->
+    <!-- Habit view -->
     <fragment
         android:id="@+id/habitViewFragment"
         android:label="@string/habit"
@@ -61,27 +60,32 @@
 
         <action
             android:id="@+id/action_from_habitViewFragment_to_habitFormFragment"
+            app:destination="@id/habitFormFragment"
             app:enterAnim="@anim/anim_slide_in"
-            app:exitAnim="@anim/anim_slide_out"
-            app:destination="@id/habitFormFragment">
+            app:exitAnim="@anim/anim_slide_out">
+
             <argument
                 android:name="habit_id"
                 app:argType="long"
                 android:defaultValue="-1L" />
+
         </action>
 
         <action
             android:id="@+id/action_from_habitViewFragment_to_taskManagementFragment"
+            app:destination="@id/taskManagementFragment"
             app:enterAnim="@anim/anim_slide_in"
-            app:exitAnim="@anim/anim_slide_out"
-            app:destination="@id/taskManagementFragment">
+            app:exitAnim="@anim/anim_slide_out">
+
             <argument
                 android:name="habit_id"
                 app:argType="long"
                 android:defaultValue="-1L" />
+
         </action>
     </fragment>
 
+    <!-- Task logs -->
     <fragment
         android:id="@+id/taskManagementFragment"
         android:label="@string/task_logs"
@@ -94,7 +98,7 @@
             android:defaultValue="-1L" />
     </fragment>
 
-    <!--Habit form screen-->
+    <!-- Habit form -->
     <fragment
         android:id="@+id/habitFormFragment"
         android:label="@string/habit"
@@ -107,40 +111,45 @@
             android:defaultValue="-1L" />
     </fragment>
 
-    <!--Open Habit form action-->
+    <!-- Open Habit form -->
     <action
         android:id="@+id/action_to_habitFormFragment"
+        app:destination="@id/habitFormFragment"
         app:enterAnim="@anim/anim_slide_in"
-        app:exitAnim="@anim/anim_slide_out"
-        app:destination="@id/habitFormFragment"/>
+        app:exitAnim="@anim/anim_slide_out" />
 
-    <!--Open Habit view action-->
+    <!-- Open Habit view -->
     <action
         android:id="@+id/action_to_habitViewFragment"
+        app:destination="@id/habitViewFragment"
         app:enterAnim="@anim/anim_slide_in"
         app:exitAnim="@anim/anim_slide_out"
-        app:destination="@id/habitViewFragment"
         app:launchSingleTop="true"
         app:popUpTo="@id/habitFormFragment"
         app:popUpToInclusive="true">
+
         <argument
             android:name="habit_id"
             app:argType="long"
             android:defaultValue="-1L" />
     </action>
 
-    <!--Settings screen-->
+    <!-- Settings -->
     <fragment
         android:id="@+id/settingsFragment"
         android:label="@string/settings"
-        android:name="com.santtuhyvarinen.habittracker.fragments.SettingsFragment">
-    </fragment>
+        android:name="com.santtuhyvarinen.habittracker.fragments.SettingsFragment" />
 
-    <!--Open settings action-->
     <action
         android:id="@+id/action_to_settingsFragment"
+        app:destination="@id/settingsFragment"
         app:enterAnim="@anim/anim_slide_in"
-        app:exitAnim="@anim/anim_slide_out"
-        app:destination="@id/settingsFragment"/>
+        app:exitAnim="@anim/anim_slide_out" />
+
+    <fragment
+        android:id="@+id/plantGrowthFragment"
+        android:label="@string/plant_growth"
+        android:name="com.santtuhyvarinen.habittracker.fragments.PlantGrowthFragment"
+        tools:layout="@layout/fragment_plant_growth" />
 
 </navigation>
